# Object-storage-server

go/: go.mod  main.go
python/: pyproject.toml
python/src/: main.py
rust/object-storage-server/: Cargo.toml
rust/object-storage-server/src/: main.rs
