[tool.poetry]
name = "object-storage-server"
version = "0.1.0"
description = ""
authors = ["Saul Burgos <saulburgos6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
